sandbox/mpi/fp_mpi.pas

function MPI_Win_create_keyval(win_copy_attr_fn:PMPI_Win_copy_attr_function; win_delete_attr_fn:PMPI_Win_delete_attr_function; win_keyval:Plongint; extra_state:pointer):longint;cdecl;external libhdf5;
function MPI_Win_delete_attr(win:TMPI_Win; win_keyval:longint):longint;cdecl;external libhdf5;
function MPI_Win_detach(win:TMPI_Win; base:pointer):longint;cdecl;external libhdf5;
function MPI_Win_f2c(win:TMPI_Fint):TMPI_Win;cdecl;external libhdf5;
function MPI_Win_fence(assert:longint; win:TMPI_Win):longint;cdecl;external libhdf5;
function MPI_Win_flush(rank:longint; win:TMPI_Win):longint;cdecl;external libhdf5;
function MPI_Win_flush_all(win:TMPI_Win):longint;cdecl;external libhdf5;
function MPI_Win_flush_local(rank:longint; win:TMPI_Win):longint;cdecl;external libhdf5;
function MPI_Win_flush_local_all(win:TMPI_Win):longint;cdecl;external libhdf5;
function MPI_Win_free(win:PMPI_Win):longint;cdecl;external libhdf5;
function MPI_Win_free_keyval(win_keyval:Plongint):longint;cdecl;external libhdf5;
function MPI_Win_get_attr(win:TMPI_Win; win_keyval:longint; attribute_val:pointer; flag:Plongint):longint;cdecl;external libhdf5;
function MPI_Win_get_errhandler(win:TMPI_Win; errhandler:PMPI_Errhandler):longint;cdecl;external libhdf5;
function MPI_Win_get_group(win:TMPI_Win; group:PMPI_Group):longint;cdecl;external libhdf5;
function MPI_Win_get_info(win:TMPI_Win; info_used:PMPI_Info):longint;cdecl;external libhdf5;
function MPI_Win_get_name(win:TMPI_Win; win_name:Pchar; resultlen:Plongint):longint;cdecl;external libhdf5;
function MPI_Win_lock(lock_type:longint; rank:longint; assert:longint; win:TMPI_Win):longint;cdecl;external libhdf5;
function MPI_Win_lock_all(assert:longint; win:TMPI_Win):longint;cdecl;external libhdf5;
function MPI_Win_post(group:TMPI_Group; assert:longint; win:TMPI_Win):longint;cdecl;external libhdf5;
function MPI_Win_set_attr(win:TMPI_Win; win_keyval:longint; attribute_val:pointer):longint;cdecl;external libhdf5;
function MPI_Win_set_errhandler(win:TMPI_Win; errhandler:TMPI_Errhandler):longint;cdecl;external libhdf5;
function MPI_Win_set_info(win:TMPI_Win; info:TMPI_Info):longint;cdecl;external libhdf5;
function MPI_Win_set_name(win:TMPI_Win; win_name:Pchar):longint;cdecl;external libhdf5;
function MPI_Win_shared_query(win:TMPI_Win; rank:longint; size:PMPI_Aint; disp_unit:Plongint; baseptr:pointer):longint;cdecl;external libhdf5;
function MPI_Win_start(group:TMPI_Group; assert:longint; win:TMPI_Win):longint;cdecl;external libhdf5;
function MPI_Win_sync(win:TMPI_Win):longint;cdecl;external libhdf5;
function MPI_Win_test(win:TMPI_Win; flag:Plongint):longint;cdecl;external libhdf5;
function MPI_Win_unlock(rank:longint; win:TMPI_Win):longint;cdecl;external libhdf5;
function MPI_Win_unlock_all(win:TMPI_Win):longint;cdecl;external libhdf5;
function MPI_Win_wait(win:TMPI_Win):longint;cdecl;external libhdf5;
function MPI_Wtick:Tdouble;cdecl;external libhdf5;
function MPI_Wtime:Tdouble;cdecl;external libhdf5;
{
   * Profiling MPI API
    }
function PMPI_Abort(comm:TMPI_Comm; errorcode:longint):longint;cdecl;external libhdf5;
function PMPI_Accumulate(origin_addr:pointer; origin_count:longint; origin_datatype:TMPI_Datatype; target_rank:longint; target_disp:TMPI_Aint; 
           target_count:longint; target_datatype:TMPI_Datatype; op:TMPI_Op; win:TMPI_Win):longint;cdecl;external libhdf5;
function PMPI_Add_error_class(errorclass:Plongint):longint;cdecl;external libhdf5;
function PMPI_Add_error_code(errorclass:longint; errorcode:Plongint):longint;cdecl;external libhdf5;
function PMPI_Add_error_string(errorcode:longint; _string:Pchar):longint;cdecl;external libhdf5;
function PMPI_Allgather(sendbuf:pointer; sendcount:longint; sendtype:TMPI_Datatype; recvbuf:pointer; recvcount:longint; 
           recvtype:TMPI_Datatype; comm:TMPI_Comm):longint;cdecl;external libhdf5;
function PMPI_Iallgather(sendbuf:pointer; sendcount:longint; sendtype:TMPI_Datatype; recvbuf:pointer; recvcount:longint; 
           recvtype:TMPI_Datatype; comm:TMPI_Comm; request:PMPI_Request):longint;cdecl;external libhdf5;
function PMPI_Allgatherv(sendbuf:pointer; sendcount:longint; sendtype:TMPI_Datatype; recvbuf:pointer; recvcounts:Plongint; 
           displs:Plongint; recvtype:TMPI_Datatype; comm:TMPI_Comm):longint;cdecl;external libhdf5;
function PMPI_Iallgatherv(sendbuf:pointer; sendcount:longint; sendtype:TMPI_Datatype; recvbuf:pointer; recvcounts:Plongint; 
           displs:Plongint; recvtype:TMPI_Datatype; comm:TMPI_Comm; request:PMPI_Request):longint;cdecl;external libhdf5;
function PMPI_Alloc_mem(size:TMPI_Aint; info:TMPI_Info; baseptr:pointer):longint;cdecl;external libhdf5;
function PMPI_Allreduce(sendbuf:pointer; recvbuf:pointer; count:longint; datatype:TMPI_Datatype; op:TMPI_Op; 
           comm:TMPI_Comm):longint;cdecl;external libhdf5;
function PMPI_Iallreduce(sendbuf:pointer; recvbuf:pointer; count:longint; datatype:TMPI_Datatype; op:TMPI_Op; 
           comm:TMPI_Comm; request:PMPI_Request):longint;cdecl;external libhdf5;
function PMPI_Alltoall(sendbuf:pointer; sendcount:longint; sendtype:TMPI_Datatype; recvbuf:pointer; recvcount:longint; 
           recvtype:TMPI_Datatype; comm:TMPI_Comm):longint;cdecl;external libhdf5;
function PMPI_Ialltoall(sendbuf:pointer; sendcount:longint; sendtype:TMPI_Datatype; recvbuf:pointer; recvcount:longint; 
           recvtype:TMPI_Datatype; comm:TMPI_Comm; request:PMPI_Request):longint;cdecl;external libhdf5;
function PMPI_Alltoallv(sendbuf:pointer; sendcounts:Plongint; sdispls:Plongint; sendtype:TMPI_Datatype; recvbuf:pointer; 
           recvcounts:Plongint; rdispls:Plongint; recvtype:TMPI_Datatype; comm:TMPI_Comm):longint;cdecl;external libhdf5;
function PMPI_Ialltoallv(sendbuf:pointer; sendcounts:Plongint; sdispls:Plongint; sendtype:TMPI_Datatype; recvbuf:pointer; 
           recvcounts:Plongint; rdispls:Plongint; recvtype:TMPI_Datatype; comm:TMPI_Comm; request:PMPI_Request):longint;cdecl;external libhdf5;
function PMPI_Alltoallw(sendbuf:pointer; sendcounts:Plongint; sdispls:Plongint; sendtypes:PMPI_Datatype; recvbuf:pointer; 
           recvcounts:Plongint; rdispls:Plongint; recvtypes:PMPI_Datatype; comm:TMPI_Comm):longint;cdecl;external libhdf5;
function PMPI_Ialltoallw(sendbuf:pointer; sendcounts:Plongint; sdispls:Plongint; sendtypes:PMPI_Datatype; recvbuf:pointer; 
           recvcounts:Plongint; rdispls:Plongint; recvtypes:PMPI_Datatype; comm:TMPI_Comm; request:PMPI_Request):longint;cdecl;external libhdf5;
function PMPI_Dist_graph_create(comm_old:TMPI_Comm; n:longint; nodes:Plongint; degrees:Plongint; targets:Plongint; 
           weights:Plongint; info:TMPI_Info; reorder:longint; newcomm:PMPI_Comm):longint;cdecl;external libhdf5;
function PMPI_Dist_graph_create_adjacent(comm_old:TMPI_Comm; indegree:longint; sources:Plongint; sourceweights:Plongint; outdegree:longint; 
           destinations:Plongint; destweights:Plongint; info:TMPI_Info; reorder:longint; comm_dist_graph:PMPI_Comm):longint;cdecl;external libhdf5;
function PMPI_Dist_graph_neighbors(comm:TMPI_Comm; maxindegree:longint; sources:Plongint; sourceweights:Plongint; maxoutdegree:longint; 
           destinations:Plongint; destweights:Plongint):longint;cdecl;external libhdf5;
function PMPI_Dist_graph_neighbors_count(comm:TMPI_Comm; inneighbors:Plongint; outneighbors:Plongint; weighted:Plongint):longint;cdecl;external libhdf5;
function PMPI_Barrier(comm:TMPI_Comm):longint;cdecl;external libhdf5;
function PMPI_Ibarrier(comm:TMPI_Comm; request:PMPI_Request):longint;cdecl;external libhdf5;
function PMPI_Bcast(buffer:pointer; count:longint; datatype:TMPI_Datatype; root:longint; comm:TMPI_Comm):longint;cdecl;external libhdf5;
function PMPI_Ibcast(buffer:pointer; count:longint; datatype:TMPI_Datatype; root:longint; comm:TMPI_Comm; 
           request:PMPI_Request):longint;cdecl;external libhdf5;
function PMPI_Bsend(buf:pointer; count:longint; datatype:TMPI_Datatype; dest:longint; tag:longint; 
           comm:TMPI_Comm):longint;cdecl;external libhdf5;
function PMPI_Bsend_init(buf:pointer; count:longint; datatype:TMPI_Datatype; dest:longint; tag:longint; 
           comm:TMPI_Comm; request:PMPI_Request):longint;cdecl;external libhdf5;
function PMPI_Buffer_attach(buffer:pointer; size:longint):longint;cdecl;external libhdf5;
function PMPI_Buffer_detach(buffer:pointer; size:Plongint):longint;cdecl;external libhdf5;
function PMPI_Cancel(request:PMPI_Request):longint;cdecl;external libhdf5;
function PMPI_Cart_coords(comm:TMPI_Comm; rank:longint; maxdims:longint; coords:Plongint):longint;cdecl;external libhdf5;
function PMPI_Cart_create(old_comm:TMPI_Comm; ndims:longint; dims:Plongint; periods:Plongint; reorder:longint; 
           comm_cart:PMPI_Comm):longint;cdecl;external libhdf5;
function PMPI_Cart_get(comm:TMPI_Comm; maxdims:longint; dims:Plongint; periods:Plongint; coords:Plongint):longint;cdecl;external libhdf5;
function PMPI_Cart_map(comm:TMPI_Comm; ndims:longint; dims:Plongint; periods:Plongint; newrank:Plongint):longint;cdecl;external libhdf5;
function PMPI_Cart_rank(comm:TMPI_Comm; coords:Plongint; rank:Plongint):longint;cdecl;external libhdf5;
function PMPI_Cart_shift(comm:TMPI_Comm; direction:longint; disp:longint; rank_source:Plongint; rank_dest:Plongint):longint;cdecl;external libhdf5;
function PMPI_Cart_sub(comm:TMPI_Comm; remain_dims:Plongint; new_comm:PMPI_Comm):longint;cdecl;external libhdf5;
function PMPI_Cartdim_get(comm:TMPI_Comm; ndims:Plongint):longint;cdecl;external libhdf5;
function PMPI_Close_port(port_name:Pchar):longint;cdecl;external libhdf5;
function PMPI_Comm_accept(port_name:Pchar; info:TMPI_Info; root:longint; comm:TMPI_Comm; newcomm:PMPI_Comm):longint;cdecl;external libhdf5;
function PMPI_Comm_c2f(comm:TMPI_Comm):TMPI_Fint;cdecl;external libhdf5;
function PMPI_Comm_call_errhandler(comm:TMPI_Comm; errorcode:longint):longint;cdecl;external libhdf5;
function PMPI_Comm_compare(comm1:TMPI_Comm; comm2:TMPI_Comm; result:Plongint):longint;cdecl;external libhdf5;
function PMPI_Comm_connect(port_name:Pchar; info:TMPI_Info; root:longint; comm:TMPI_Comm; newcomm:PMPI_Comm):longint;cdecl;external libhdf5;
function PMPI_Comm_create_errhandler(_function:PMPI_Comm_errhandler_function; errhandler:PMPI_Errhandler):longint;cdecl;external libhdf5;
function PMPI_Comm_create_keyval(comm_copy_attr_fn:PMPI_Comm_copy_attr_function; comm_delete_attr_fn:PMPI_Comm_delete_attr_function; comm_keyval:Plongint; extra_state:pointer):longint;cdecl;external libhdf5;
function PMPI_Comm_create_group(comm:TMPI_Comm; group:TMPI_Group; tag:longint; newcomm:PMPI_Comm):longint;cdecl;external libhdf5;
function PMPI_Comm_create(comm:TMPI_Comm; group:TMPI_Group; newcomm:PMPI_Comm):longint;cdecl;external libhdf5;
function PMPI_Comm_delete_attr(comm:TMPI_Comm; comm_keyval:longint):longint;cdecl;external libhdf5;
function PMPI_Comm_disconnect(comm:PMPI_Comm):longint;cdecl;external libhdf5;
function PMPI_Comm_dup(comm:TMPI_Comm; newcomm:PMPI_Comm):longint;cdecl;external libhdf5;
function PMPI_Comm_idup(comm:TMPI_Comm; newcomm:PMPI_Comm; request:PMPI_Request):longint;cdecl;external libhdf5;
function PMPI_Comm_dup_with_info(comm:TMPI_Comm; info:TMPI_Info; newcomm:PMPI_Comm):longint;cdecl;external libhdf5;
function PMPI_Comm_f2c(comm:TMPI_Fint):TMPI_Comm;cdecl;external libhdf5;
function PMPI_Comm_free_keyval(comm_keyval:Plongint):longint;cdecl;external libhdf5;
function PMPI_Comm_free(comm:PMPI_Comm):longint;cdecl;external libhdf5;
function PMPI_Comm_get_attr(comm:TMPI_Comm; comm_keyval:longint; attribute_val:pointer; flag:Plongint):longint;cdecl;external libhdf5;
function PMPI_Comm_get_errhandler(comm:TMPI_Comm; erhandler:PMPI_Errhandler):longint;cdecl;external libhdf5;
function PMPI_Comm_get_info(comm:TMPI_Comm; info_used:PMPI_Info):longint;cdecl;external libhdf5;
function PMPI_Comm_get_name(comm:TMPI_Comm; comm_name:Pchar; resultlen:Plongint):longint;cdecl;external libhdf5;
function PMPI_Comm_get_parent(parent:PMPI_Comm):longint;cdecl;external libhdf5;
